Preloader and fix on calendar stuff to show mutli-day all day events

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
   <body>
+    <div id="preloader">Loading ...</div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
