--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -11,6 +11,14 @@
   </head>
   <body>
     <div id="preloader">Loading ...</div>
+    <noscript>
+      <div>
+        <h1>JavaScript is disabled</h1>
+        <p>
+          Please enable JavaScript in your browser to view this website
+          correctly.
+        </p>
+      </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
