--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -14,11 +14,9 @@
     <noscript>
       <div>
         <h1>JavaScript is disabled</h1>
-        <p>
-          Please enable JavaScript in your browser to view this website
-          correctly.
-        </p>
+        <p>Please enable JavaScript in your browser to view this website correctly.</p>
       </div>
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
