--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <!-- injected globals script -->
   </head>
   <body>
     <div id="preloader">Loading ...</div>
